# identity-trust-inclusion-fabric

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: experiment.yaml
docs/: DATA_GOVERNANCE.md  MARKET_LANDSCAPE.md  PRODUCT_BRIEF.md  REQUIREMENTS_CANVAS.md  RESEARCH_TRACEABILITY.md  THREAD_AND_ARTIFACT_INVENTORY.md
paper/: main.tex  references.bib
paper/chapters/: 00_abstract.tex  01_problem.tex  02_foundations.tex  03_research.tex  04_architecture.tex  05_models.tex  06_experiment.tex  07_governance.tex  08_product.tex  09_roadmap.tex  10_conclusion.tex  A_requirements.tex  B_protocol.tex  C_traceability.tex
results/: demo_metrics.json
scripts/: run_experiment.py
src/itif/: __init__.py  evaluate.py  generate.py  model.py
tests/: test_pipeline.py
