[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "identity-trust-inclusion-fabric"
version = "0.1.0"
description = "Synthetic research demonstrator for federated identity, credential assurance, fraud detection, and inclusion monitoring."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.7",
  "networkx>=3.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

